Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -111,6 +111,7 @@
     "api-keys": "API Keys",
     "api-version-not-found": "Versió de API no trobada",
     "app-preferences": "Preferències d'aplicació",
+    "app-storage": "Emmagatzematge.",
     "applied-tax": "Impost aplicat",
     "apply": "Aplicar",
     "approve": "Aprovar",
