--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -111,6 +111,7 @@
     "api-keys": "API Keys",
     "api-version-not-found": "API-Version nicht gefunden",
     "app-preferences": "App-Einstellungen",
+    "app-storage": "Speicher",
     "applied-tax": "angewandte Steuer",
     "apply": "Anwenden",
     "approve": "Genehmigen",
@@ -584,7 +585,7 @@
     "es-tax-exception-e4": "Spanien: Ausnahme nach Artikel 23 und 24 des Umsatzsteuergesetzes",
     "es-tax-exception-e5": "Spanien: Ausnahme nach Artikel 25 des Umsatzsteuergesetzes",
     "es-tax-exception-e6": "Spanien: Steuerausnahme aus einem anderen Grund",
-    "es-tax-exception-location-rules": "Steuerausnahme-Ortregeln",
+    "es-tax-exception-location-rules": "Spanien: N2 Nicht steuerbar – Regeln zur Ortsbestimmung von Dienstleistungen (Art. 69–70 LIVA, B2B‑Dienstleistungen innerhalb oder außerhalb der EU)",
     "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
     "es-tax-regime-agrarian": "Besonderes Regime der Landwirtschaft, Viehzucht und Fischerei",
     "es-tax-regime-cash-criteria": "K",
@@ -1537,7 +1538,7 @@
     "subtotal": "Zwischensumme",
     "subtract": "Subtrahieren",
     "success": "Erfolg",
-    "successive-tract": "successive-tract",
+    "successive-tract": "sukzessiver Abschnitt",
     "sum": "Summe",
     "sum-netos-line-tax-must-be": "Die Summe des Nettos der Mehrwertsteuerzeilen sollte 0 sein.",
     "sum-total-line-tax-must-be": "Die Summe der MwSt.-Summen der MwSt.-Zeilen sollte 0 sein.",
