--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -111,6 +111,7 @@
     "api-keys": "API Keys",
     "api-version-not-found": "API version not found",
     "app-preferences": "App Preferences",
+    "app-storage": "Storage",
     "applied-tax": "Applied tax",
     "apply": "Apply",
     "approve": "Approve",
