--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -111,6 +111,7 @@
     "api-keys": "Clés de l'API",
     "api-version-not-found": "Version d'API non trouvée",
     "app-preferences": "Préférences de l'application",
+    "app-storage": "Stockage",
     "applied-tax": "Taxe appliquée",
     "apply": "Appliquer",
     "approve": "Approuver",
