--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -111,6 +111,7 @@
     "api-keys": "Chiavi API",
     "api-version-not-found": "Versione API non trovata",
     "app-preferences": "Preferenze app",
+    "app-storage": "Archiviazione",
     "applied-tax": "imposta applicata",
     "apply": "Applica",
     "approve": "Approvare",
@@ -585,7 +586,7 @@
     "es-tax-exception-e5": "Spagna: eccezione per l'articolo 25 della legge sull'IVA",
     "es-tax-exception-e6": "Spagna: eccezione per altro motivo",
     "es-tax-exception-location-rules": "regole di eccezione fiscale per posizione",
-    "es-tax-exception-passive-subject": "eccezione fiscale es. soggetto passivo",
+    "es-tax-exception-passive-subject": "Spagna: N6 inversione del soggetto passivo (art. 84 LIVA)",
     "es-tax-regime-agrarian": "Regime speciale dell'agricoltura, dell'allevamento e della pesca",
     "es-tax-regime-cash-criteria": "Criterio di cassa",
     "es-tax-regime-especial-agp": "Regime speciale dell'agricoltura, dell'allevamento e della pesca",
@@ -1127,7 +1128,7 @@
     "opened": "Aperto",
     "opening-acounting-completed": "Apertura dell'esercizio corretta",
     "opening-operation": "Apertura",
-    "operating-system": "Sistema Operativo",
+    "operating-system": "Sistema operativo",
     "operation": "Operazione",
     "operation-export": "Operazione di esportazione",
     "operator": "Operatore",
@@ -1387,7 +1388,7 @@
     "roles": "ruoli",
     "rules": "Regole",
     "run": "eseguire",
-    "running": "Ejecutando",
+    "running": "In esecuzione",
     "running-plugin-cron": "Esecuzione del cron del plugin %pluginName%",
     "running-work-queue": "Esecuzione della coda degli eventi di lavoro",
     "sales": "I saldi",
