--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -111,6 +111,7 @@
     "api-keys": "Klucze API",
     "api-version-not-found": "Nie znaleziono wersji API",
     "app-preferences": "Preferencje aplikacji",
+    "app-storage": "Przechowywanie",
     "applied-tax": "Zastosowany podatek",
     "apply": "Aplicar",
     "approve": "Zatwierdź",
