--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -111,6 +111,7 @@
     "api-keys": "API Keys",
     "api-version-not-found": "Versão da API não encontrada",
     "app-preferences": "Preferências do aplicativo",
+    "app-storage": "Armazenamento",
     "applied-tax": "imposto aplicado",
     "apply": "Aplicar",
     "approve": "Aprovar",
@@ -944,7 +945,7 @@
     "login-cookie-fail": "Cookie de sessão inválido: provavelmente você fez login a partir de outro dispositivo ou navegador.",
     "login-image": "Imagem de login",
     "login-ok": "Login bem-sucedido (cookie). Usuário: '%nick%'",
-    "login-password-changed": "Senha alterada corretamente",
+    "login-password-changed": "Senha alterada com sucesso",
     "login-password-fail": "Usuário ou senha incorretos",
     "login-text": "Digite seu nome de usuário e senha para entrar",
     "login-to-continue": "Faça login para continuar",
@@ -1709,7 +1710,7 @@
     "users": "Usuários",
     "using-apc": "Usando o cache APC",
     "using-filecache": "Usando o Filecache",
-    "using-memcache": "Usando Memcache",
+    "using-memcache": "Usando o Memcache",
     "valid-for-day": "Válido por um dia",
     "validate": "Validar",
     "validate-iban": "Validar IBAN",
