--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -111,6 +111,7 @@
     "api-keys": "API Keys",
     "api-version-not-found": "Versão da API não encontrada",
     "app-preferences": "Preferências da aplicação",
+    "app-storage": "Armazenamento",
     "applied-tax": "Imposto aplicado",
     "apply": "Aplicar",
     "approve": "Aprovar",
