--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -111,6 +111,7 @@
     "api-keys": "API Keys",
     "api-version-not-found": "Versió de API no trobada",
     "app-preferences": "Preferències de l'aplicació",
+    "app-storage": "Emmagatzematge",
     "applied-tax": "Impost aplicat",
     "apply": "Aplicar",
     "approve": "Aprovar",
@@ -1002,7 +1003,7 @@
     "meta-description": "FacturaScripts és un software de facturació i contabilitat per a xicotetes i mitjanes empreses. És software lliure baix la llicència GNU\/LGPL.",
     "method-payment": "Forma de pagament",
     "mime-type": "Mime Type",
-    "min-fs-version": "Versión min. Core",
+    "min-fs-version": "Versió mín. del Core",
     "min-php-version": "Min. v. PHP",
     "minimum-amount-with-cifnif": "Import mínim amb CIF\/NIF",
     "minimum-amount-without-cifnif": "Mínim import sense CIF\/NIF",
@@ -1387,7 +1388,7 @@
     "roles": "Grups",
     "rules": "Regles",
     "run": "run",
-    "running": "Ejecutando",
+    "running": "En execució",
     "running-plugin-cron": "S'està eixecutant el cron del plugin %pluginName%",
     "running-work-queue": "Executant la cua d'esdeveniments de treball",
     "sales": "Vendes",
