--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -111,6 +111,7 @@
     "api-keys": "API Keys",
     "api-version-not-found": "Versión de API no encontrada",
     "app-preferences": "Preferencias de aplicación",
+    "app-storage": "Úložiště",
     "applied-tax": "Impuesto aplicado",
     "apply": "Aplicar",
     "approve": "Aprobar",
