--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -111,6 +111,7 @@
     "api-keys": "API Keys",
     "api-version-not-found": "Ez da aurkitu API bertsioa",
     "app-preferences": "Aplikazioaren hobespenak",
+    "app-storage": "Biltegiratzea",
     "applied-tax": "Aplikatutako zerga",
     "apply": "Aplikatu",
     "approve": "Onartu",
