--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -111,6 +111,7 @@
     "api-keys": "API Keys",
     "api-version-not-found": "Versión da API non atopada",
     "app-preferences": "Preferencias da aplicación",
+    "app-storage": "Almacenamento",
     "applied-tax": "imposto aplicado",
     "apply": "Aplicar",
     "approve": "Aprobar",
