Actualizadas las traducciones.

--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1004,7 +1004,7 @@
     "method-payment": "Moyen de paiement",
     "mime-type": "Type MIME",
     "min-fs-version": "Version min. Core",
-    "min-php-version": "Min. v. PHP",
+    "min-php-version": "Version minimale de PHP",
     "minimum-amount-with-cifnif": "Montant minimum avec CIF\/NIF",
     "minimum-amount-without-cifnif": "Montant minimum sans CIF\/NIF",
     "minimum-stock": "Stock minimum",
@@ -1656,7 +1656,7 @@
     "two-factor-auth-enable": "Activer l'authentification à deux facteurs",
     "two-factor-auth-enabled": "Authentification à 2 facteurs activée",
     "two-factor-auth-p": "Configurez l'application Google Authenticator en utilisant le QR, entrez le code ici et appuyez sur vérifier pour compléter le processus d'activation.",
-    "two-factor-code": "Code à double facteur",
+    "two-factor-code": "Code à deux facteurs",
     "two-factor-enabled": "Activer l’authentification à deux facteurs",
     "type": "Type",
     "type-alert": "Type alerte",
