--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1654,7 +1654,7 @@
     "two-factor-auth-disable": "Disattivare l'autenticazione a due fattori",
     "two-factor-auth-disabled": "Autenticazione a due fattori disattivata",
     "two-factor-auth-enable": "Attivare l'autenticazione a due fattori",
-    "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
+    "two-factor-auth-enabled": "Autenticazione a due fattori attivata",
     "two-factor-auth-p": "Configura l'app Google Authenticator utilizzando il QR, inserisci qui il codice e premi verifica per completare il processo di attivazione.",
     "two-factor-code": "Codice a doppio fattore",
     "two-factor-enabled": "Attivare l'autenticazione a due fattori",
@@ -1733,7 +1733,7 @@
     "vat-regularization": "Regolarizzazione IVA",
     "vehicle": "Veicolo",
     "verified": "Verificato",
-    "verify": "Verificar",
+    "verify": "Verifica",
     "version": "versione",
     "video": "Video",
     "vies-check-success": "Il numero '%vat-number%' è registrato nel sistema VIES",
