Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -932,7 +932,7 @@
     "list": "Liste",
     "load-def-acc-plan": "Laden Sie den Standardkontenplan",
     "loading-controller": "Controller laden: '0'",
-    "local-business-rental": "Mietpreise für lokale Geschäfte",
+    "local-business-rental": "Vermietung von Geschäftsräumen",
     "location": "Standort",
     "lock-accounting": "Buchhaltung sperren",
     "lock-entry": "Buchung sperren",
