--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1782,7 +1782,7 @@
     "years": "Anos",
     "yes": "Sim",
     "yesterday": "Ontem",
-    "you-can-sort-images": "Puedes ordenar las imágenes arrastrándolas",
+    "you-can-sort-images": "Você pode ordenar as imagens arrastando-as",
     "you-cant-delete-primary-variant": "Você não pode excluir a variante principal do produto",
     "you-sent-a-audio": "Enviaste um áudio",
     "you-sent-a-document": "Você enviou um documento",
