Actualizadas las traducciones.

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -598,7 +598,7 @@
     "es-tax-regime-one-stop-shop-oss": "regime fiscale-es-sportello unico-oss",
     "es-tax-regime-simplified": "Regime fiscale semplificato",
     "es-tax-regime-special-retail-traders": "Regime fiscale speciale per i dettaglianti",
-    "es-tax-regime-special-small-business": "es-tax-regime-special-small-business",
+    "es-tax-regime-special-small-business": "Regime fiscale speciale per piccole imprese",
     "es-tax-regime-surcharge": "Recargo di equivalenza",
     "es-tax-regime-telecom": "Regimi speciali applicabili ai servizi di telecomunicazioni, radiodiffusione o televisivi e ai servizi erogati via elettronica",
     "es-tax-regime-travel": "Regime fiscale speciale per le agenzie di viaggio",
