--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -577,7 +577,7 @@
     "error-write-cert": "Errore bat gertatu da ziurtagiria idaztean",
     "errors": "Erroreak",
     "es_EC": "Espainiako gaztelania (Ekuador)",
-    "es-tax-exception-art-14": "es-tax-exception-art-14",
+    "es-tax-exception-art-14": "Espainia: N4 Art. 14 LIVA – ez dago zerga-subjektuan (esportazioekin lotutako eragiketak)",
     "es-tax-exception-art-7": "es-tax-exception-art-7",
     "es-tax-exception-e1": "Espainia: BEZaren 20. legearen artikuluaren salbuespena",
     "es-tax-exception-e2": "Espainia: BEZaren Legearen 21. artikuluaren salbuespena",
@@ -1079,7 +1079,7 @@
     "no-reference": "Erreferentziarik gabe",
     "no-selected-item": "Ez da elementurik aukeratu",
     "no-stock": "Stocka ez kontrolatu",
-    "no-updates-now": "No hay actualizaciones en este momento",
+    "no-updates-now": "Une honetan ez dago eguneratzerik",
     "non-editable-accounting-entry": "Idazpena ezin da editatu",
     "non-editable-columns": "Zutabe ez editagarriak: %columns%",
     "non-editable-document": "Dokumentu ez editagarria",
