--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1412,6 +1412,7 @@
     "select": "Auswählen",
     "select-all": "Alle auswählen",
     "select-content-for": "Wählen Sie Inhalt für %content% aus.",
+    "select-file-to-add": "Puedes añadir un archivo desde aquí, seleccionalo y súbelo desde tu computador. Pulsa el botón ninguno si lo que quieres es seleccionar ninguno.",
     "select-none": "Keine Auswahl treffen",
     "select-plugin-zip-file": "Wählen Sie die Plugin-Zip-Datei:",
     "select-user": "Benutzer auswählen",
