--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1412,6 +1412,7 @@
     "select": "Wybierz",
     "select-all": "Zaznacz wszystko",
     "select-content-for": "Wybierz zawartość dla %content%",
+    "select-file-to-add": "Puedes añadir un archivo desde aquí, seleccionalo y súbelo desde tu computador. Pulsa el botón ninguno si lo que quieres es seleccionar ninguno.",
     "select-none": "Nie wybieraj nic",
     "select-plugin-zip-file": "Wybierz wtyczkę (zip):",
     "select-user": "Wybierz użytkownika",
