Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -675,7 +675,7 @@
     "fixed-value": "Valor fijo",
     "flag": "Bandera",
     "folder-not-writable": "No se puede escribir sobre la carpeta de FacturaScripts.",
-    "folders-not-writable": "No se puede escribir sobre la carpeta de FacturaScripts: %folders%",
+    "folders-not-writable": "Nelze zapisovat do složek FacturaScripts: %folders%",
     "font": "Fuente",
     "font-size": "Tamaño fuente",
     "footer": "Pie de página",
@@ -1074,7 +1074,7 @@
     "no-gaps-found": "Ningún hueco encontrado",
     "no-invoice": "Sin factura",
     "no-outstanding-amount": "No hay importe pendiente",
-    "no-plugins-installed": "No hay plugins instalados",
+    "no-plugins-installed": "Nejsou nainstalovány žádné pluginy.",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
     "no-reference": "Bez reference",
     "no-selected-item": "Ningún elemento seleccionado",
@@ -1206,7 +1206,7 @@
     "php-extension-needed": "Ve zkonfiguraci PHP je vyžadováno rozšíření %extension%",
     "php-extension-not-found": "No tienes la extensión %extension% de PHP instalada.",
     "php-extensions": "PHP rozšíření",
-    "php-extensions-required": "Extensiones PHP requeridas",
+    "php-extensions-required": "Požadovaná rozšíření PHP",
     "php-support-end": "El soporte para PHP %current% terminará pronto. Por favor, actualiza PHP a la versión %min% o superior.",
     "php-version-too-new": "Doporučuje se používat verzi PHP mezi %min_version% a %max_version%. Aktuálně máte %version%.",
     "physical-stock": "Stock físico",
