--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -824,7 +824,7 @@
     "invalid-iso-code": "Código ISO '%iso-code%' ez da zuzena",
     "invalid-number": "Zenbaki baliogabea: %number%",
     "invalid-request": "Eskaera baliogabea",
-    "invalid-token": "Token baliogabea",
+    "invalid-token": "Tokena baliogabea",
     "invalid-token-p": "Artikuluaren %file% sarbide-tokena ez da baliogarria edo iraungita dago",
     "invalid-user-can-permission": "Baimen baliogabea: %permission%. Eskuragarri dauden baimenak atzitu, ezabatu, esportatu, inportatu, eguneratu eta jabe bakarraren datuak dira.",
     "invalid-web": "Web helbide baliogabea",
@@ -897,7 +897,7 @@
     "last-activity": "Azken konexioa",
     "last-bimester": "Aurreko bihilekoan",
     "last-block": "Azkenengo blokea",
-    "last-duration": "Última duración",
+    "last-duration": "Azken iraupena",
     "last-ip": "Azken IPa",
     "last-month": "Aurreko hilabetean",
     "last-price-estimation": "Azken aurrekontuaren prezioa",
