--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -585,7 +585,7 @@
     "es-tax-exception-e4": "Espanha: exceção do artigo 23 e 24 da Lei do IVA",
     "es-tax-exception-e5": "Espanha: exceção pelo artigo 25 da Lei do IVA",
     "es-tax-exception-e6": "E",
-    "es-tax-exception-location-rules": "es-tax-exception-location-rules",
+    "es-tax-exception-location-rules": "Espanha: N2 Não sujeita – Regras de localização de serviços (arts. 69–70 LIVA, serviços B2B UE ou fora da UE)",
     "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
     "es-tax-regime-agrarian": "R",
     "es-tax-regime-cash-criteria": "Criterio de caixa",
@@ -804,7 +804,7 @@
     "infostate-component-title": "Informação de Estado",
     "initial-number": "Número inicial",
     "insert-update": "Adicionar ou modificar",
-    "installation": "Instalación",
+    "installation": "Instalação",
     "installed": "Instalado",
     "installed-plugins": "Instalados",
     "installer": "Instalador",
@@ -1783,7 +1783,7 @@
     "years": "Anos",
     "yes": "Sim",
     "yesterday": "Ontem",
-    "you-can-sort-images": "Puedes ordenar las imágenes arrastrándolas",
+    "you-can-sort-images": "Pode ordenar as imagens arrastando-as",
     "you-cant-delete-primary-variant": "Não pode eliminar a variante principal do produto",
     "you-sent-a-audio": "Enviaste um áudio",
     "you-sent-a-document": "Enviaste um documento",
