--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -92,7 +92,7 @@
     "allow-sale-without-stock": "Permetre la venda sense estoc",
     "allow-sale-without-stock-n": "Permetre la venda sense estoc en nous productes",
     "allow-update": "Permetre l'actualització",
-    "already-installed": "Ya instalado",
+    "already-installed": "Ja instal·lat",
     "already-installed-p": "El programa ja està instal·lat",
     "always-to-company-email": "Siempre al email de la empresa",
     "amount": "Import",
@@ -586,7 +586,7 @@
     "es-tax-exception-e5": "Espanya: excepció per l'article 25 de la Llei de l'IVA",
     "es-tax-exception-e6": "Espanya: excepció per una altra causa",
     "es-tax-exception-location-rules": "es-tax-exception-location-rules",
-    "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
+    "es-tax-exception-passive-subject": "Espanya: N6 Inversió del subjecte passiu (art. 84 LIVA)",
     "es-tax-regime-agrarian": "Règim especial de l'agricultura, ramaderia i pesca",
     "es-tax-regime-cash-criteria": "Criteri de caixa",
     "es-tax-regime-especial-agp": "Règim especial de l'agricultura, ramaderia i pesca",
@@ -597,7 +597,7 @@
     "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
     "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
     "es-tax-regime-simplified": "Règim simplificat",
-    "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
+    "es-tax-regime-special-retail-traders": "Règim fiscal especial: comerciants minoristes",
     "es-tax-regime-special-small-business": "es-tax-regime-special-small-business",
     "es-tax-regime-surcharge": "Recàrrec d'equivalència",
     "es-tax-regime-telecom": "Règims especials aplicables als serveis de telecomunicacions, de radiodifusió o de televisió i als prestats per via electrònica",
@@ -1066,7 +1066,7 @@
     "next": "Següent",
     "nick": "Sobrenom",
     "no": "No",
-    "no-admin": "No administrador",
+    "no-admin": "No és administrador",
     "no-data": "No hi han senyes",
     "no-data-received-form": "Cap dada rebuda pel formulari",
     "no-document-selected": "No s'ha seleccionat cap document",
