--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1412,7 +1412,7 @@
     "select": "Select",
     "select-all": "Select all",
     "select-content-for": "Select content for %content%",
-    "select-file-to-add": "Puedes añadir un archivo desde aquí, seleccionalo y súbelo desde tu computador. Pulsa el botón ninguno si lo que quieres es seleccionar ninguno.",
+    "select-file-to-add": "You can add a file from here: select it and upload it from your computer. Press the 'None' button if you want to select none.",
     "select-none": "Select none",
     "select-plugin-zip-file": "Select plugin zip file:",
     "select-user": "Select User",
