--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1652,7 +1652,7 @@
     "try-again-later": "Versuchen Sie es später erneut",
     "tuesday": "Dienstag",
     "two-factor-auth": "Zwei-Faktor-Authentifizierung",
-    "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
+    "two-factor-auth-disable": "Zwei-Faktor-Authentifizierung deaktivieren",
     "two-factor-auth-disabled": "Zwei-Faktor-Authentifizierung deaktiviert",
     "two-factor-auth-enable": "Aktivieren Sie die 2-Faktor-Authentifizierung",
     "two-factor-auth-enabled": "Die Zwei-Faktor-Authentifizierung ist aktiviert.",
