--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -594,10 +594,10 @@
     "es-tax-regime-general": "Régime général",
     "es-tax-regime-gold": "Régime spécial de l'or d'investissement",
     "es-tax-regime-group-entities": "Régime spécial de groupe d'entités",
-    "es-tax-regime-one-stop-shop-ioss": "régime fiscal de guichet unique",
+    "es-tax-regime-one-stop-shop-ioss": "Régime fiscal du guichet unique (IOSS)",
     "es-tax-regime-one-stop-shop-oss": "régime fiscal du guichet unique (OSS)",
     "es-tax-regime-simplified": "Régime simplifié",
-    "es-tax-regime-special-retail-traders": "régime fiscal spécial pour les détaillants",
+    "es-tax-regime-special-retail-traders": "Régime fiscal spécial pour les détaillants",
     "es-tax-regime-special-small-business": "régime fiscal spécialement prévu pour les petites entreprises",
     "es-tax-regime-surcharge": "Surtaxe d'équivalence",
     "es-tax-regime-telecom": "Régimes spéciaux applicables aux services de télécommunications, de radiodiffusion ou de télévision et aux services fournis par voie électronique",
