--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -807,7 +807,7 @@
     "installation": "Instalación",
     "installed": "Instalado",
     "installed-plugins": "Instalados",
-    "installer": "Instalador de FacturaScripts",
+    "installer": "Instalador",
     "installer-p": "Benvido ao instalador FacturaScripts. Encha os campos necesarios para conectarse á base de datos.",
     "installer-requirements": "As seguintes extensións e funcións son necesarias en Facturascripts:",
     "integrity-check": "Verificación de integridade",
