Refactor translation files to improve language accuracy and consistency

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -93,7 +93,7 @@
     "allow-sale-without-stock-n": "Permitir la venta sin stock en nuevos productos",
     "allow-update": "Permitir modificar",
     "already-installed": "Již nainstalováno",
-    "already-installed-p": "El programa ya está instalado",
+    "already-installed-p": "Program je již nainstalován",
     "always-to-company-email": "Siempre al email de la empresa",
     "amount": "Importe",
     "amount-without-discount": "Precio sin descuento",
@@ -1232,7 +1232,7 @@
     "plugin-update": "Actualización del plugin %pluginName% a la versión %version%",
     "plugins": "Plugins",
     "plugins-p": "Los plugins permiten añadir nuevas funciones. Activa los que necesites ahora, o bien hazlo cuando quieras desde el menú administrador.",
-    "plugins-required": "Plugins requeridos",
+    "plugins-required": "Požadované zásuvné moduly",
     "points": "Puntos",
     "points-of-interest": "Body zájmu.",
     "port": "Puerto",
