--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1412,7 +1412,7 @@
     "select": "Select",
     "select-all": "Select all",
     "select-content-for": "Select content for %content%",
-    "select-file-to-add": "You can add a file from here: select it and upload it from your computer. Press the 'None' button if you want to select none.",
+    "select-file-to-add": "You can add a file here: select it and upload it from your computer. Click the 'None' button to select no file.",
     "select-none": "Select none",
     "select-plugin-zip-file": "Select plugin zip file:",
     "select-user": "Select User",
@@ -1639,7 +1639,7 @@
     "totaliva-value-error": "Total tax amount of %docType% %docCode% incorrect (%docTotalTax%). Correct amount: %calcTotalTax%",
     "totallinea-value-error": "Error in the totallinea value of the VAT line of the tax %taxCode% of the invoice. Correct value: %totalLine%",
     "totals": "Totals",
-    "totp-secret-key-not-set": "User %nick% does not have a TOTP secret key set",
+    "totp-secret-key-not-set": "User %nick% does not have a TOTP secret key configured",
     "town": "Town",
     "tracking-code": "Tracking code",
     "transfer": "Transfer",
