--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -577,7 +577,7 @@
     "error-write-cert": "Erreur lors de l'écriture du certificat",
     "errors": "erreurs",
     "es_EC": "Espagnol (Équateur)",
-    "es-tax-exception-art-14": "es-tax-exception-art-14",
+    "es-tax-exception-art-14": "Espagne : N4 Non soumise (art. 14 LIVA) – Opérations liées aux exportations",
     "es-tax-exception-art-7": "art 7 d'exception fiscale",
     "es-tax-exception-e1": "Espagne: exception pour l'article 20 de la loi sur la TVA",
     "es-tax-exception-e2": "Espagne: exception pour l'article 21 de la loi sur la TVA",
@@ -1412,7 +1412,7 @@
     "select": "Sélectionner",
     "select-all": "Tout sélectionner",
     "select-content-for": "Sélectionnez le contenu pour %content%",
-    "select-file-to-add": "Puedes añadir un archivo desde aquí, seleccionalo y súbelo desde tu computador. Pulsa el botón ninguno si lo que quieres es seleccionar ninguno.",
+    "select-file-to-add": "Vous pouvez ajouter un fichier ici : sélectionnez-le et téléversez-le depuis votre ordinateur. Appuyez sur le bouton « Aucun » si vous ne souhaitez rien sélectionner.",
     "select-none": "Ne rien sélectionner",
     "select-plugin-zip-file": "Sélectionnez le fichier ZIP du module :",
     "select-user": "Sélectionner un utilisateur",
