Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -2,7 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "abgekürz",
     "about": "Über",
-    "acc-concept-required": "Zuerst müssen Sie das Konzept des Eintrags angeben",
+    "acc-concept-required": "Sie müssen zuerst das Buchungskonzept eingeben.",
     "accept": "akzeptieren",
     "accept-all": "Aceptar todo",
     "accept-data": "Akzeptieren Sie Änderungen oder Vorgänge",
@@ -1412,7 +1412,7 @@
     "select": "Auswählen",
     "select-all": "Alle auswählen",
     "select-content-for": "Wählen Sie Inhalt für %content% aus.",
-    "select-file-to-add": "Puedes añadir un archivo desde aquí, seleccionalo y súbelo desde tu computador. Pulsa el botón ninguno si lo que quieres es seleccionar ninguno.",
+    "select-file-to-add": "Sie können hier eine Datei hinzufügen, wählen Sie diese aus und laden Sie sie von Ihrem Computer hoch. Drücken Sie die Schaltfläche \"Keine\", wenn Sie keine auswählen möchten.",
     "select-none": "Keine Auswahl treffen",
     "select-plugin-zip-file": "Wählen Sie die Plugin-Zip-Datei:",
     "select-user": "Benutzer auswählen",
