--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -807,7 +807,7 @@
     "installation": "Installazione",
     "installed": "Installato",
     "installed-plugins": "Plugin installati",
-    "installer": "Installer",
+    "installer": "Installatore",
     "installer-p": "Benvenuti al programma di installazione FacturaScripts. Compilare i campi necessari per la connessione al database.",
     "installer-requirements": "Le seguenti estensioni e funzioni sono necessarie per FacturaScript:",
     "integrity-check": "Controllo integrità",
