Actualizadas las traducciones

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -585,7 +585,7 @@
     "es-tax-exception-e4": "España: excepción por el artículo 23 y 24 de la Ley del IVA",
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
     "es-tax-exception-e6": "España: excepción por otra causa",
-    "es-tax-exception-location-rules": "es-tax-exception-location-rules",
+    "es-tax-exception-location-rules": "Španělsko: N2 Nepodléhá dani – Pravidla lokalizace služeb (články 69–70 LIVA, služby B2B v EU nebo mimo EU)",
     "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
     "es-tax-regime-agrarian": "Zvláštní režim zemědělství, chovu zvířat a rybolovu",
     "es-tax-regime-cash-criteria": "Hotovostní kritéria",
@@ -1130,7 +1130,7 @@
     "opening-operation": "Apertura",
     "operating-system": "Sistema Operativo",
     "operation": "Operación",
-    "operation-export": "Operación exportación",
+    "operation-export": "Exportní operace",
     "operator": "Operador",
     "option": "Opción",
     "optional": "opcional",
