--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1130,7 +1130,7 @@
     "opening-operation": "Öffnung",
     "operating-system": "Betriebssystem",
     "operation": "Operation",
-    "operation-export": "Betrieb Export",
+    "operation-export": "Exportvorgang",
     "operator": "Bediener",
     "option": "Option",
     "optional": "optional",
