--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -807,7 +807,7 @@
     "installation": "Installation",
     "installed": "Installé",
     "installed-plugins": "Installé",
-    "installer": "Installateur FacturaScripts 2018 (Alpha)",
+    "installer": "Programme d'installation",
     "installer-p": "Bienvenue à l'installateur de FacturaScripts. Remplissez les champs nécessaires pour se connecter à la base de données.",
     "installer-requirements": "Les extensions et fonctions suivantes sont nécessaires pour FacturaScripts:",
     "integrity-check": "Test d'intégrité",
