--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -577,7 +577,7 @@
     "error-write-cert": "Error en escriure el certificat",
     "errors": "Erros",
     "es_EC": "Espanyol (Ecuador)",
-    "es-tax-exception-art-14": "excepció fiscal art. 14",
+    "es-tax-exception-art-14": "Espanya: N4 No subjecta art. 14 LIVA – Operacions vinculades a exportacions",
     "es-tax-exception-art-7": "excepció fiscal art. 7",
     "es-tax-exception-e1": "Espanya: excepció per l'article 20 de la Llei de l'IVA",
     "es-tax-exception-e2": "Espanya: excepció per l'article 21 de la Llei de l'IVA",
