--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1698,7 +1698,7 @@
     "updater": "Atualizador",
     "updates-available": "Atualizações disponíveis",
     "updates-available-p": "Há atualizações disponíveis para o FacturaScripts. Por favor, clique no atualizador e faça o download da nova versão. As actualizações corrigem falhas e adicionam novas funcionalidades.",
-    "updates-beta-warning": "Actualizaciones beta activadas",
+    "updates-beta-warning": "Atualizações beta ativadas",
     "updates-beta-warning-p": "⚠️ Tem atualizações beta ativadas. Essas atualizações não foram testadas e são recomendadas apenas em instalações de teste.",
     "updating-attached-relations": "Atualizando contadores de relações anexadas",
     "upload-file": "E",
