Actualizadas las traducciones.

--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -162,7 +162,7 @@
     "barcode": "Còdic de barres",
     "bcc": "CCO",
     "become-sponsor": "Fes-te patrocinador",
-    "benefit-3-parties": "benefit-3-parties",
+    "benefit-3-parties": "benefici a 3 parts",
     "big": "Gran",
     "billing": "Facturació",
     "billing-address": "Direcció de facturació",
@@ -578,7 +578,7 @@
     "errors": "Erros",
     "es_EC": "Espanyol (Ecuador)",
     "es-tax-exception-art-14": "Espanya: N4 No subjecta art. 14 LIVA – Operacions vinculades a exportacions",
-    "es-tax-exception-art-7": "excepció fiscal art. 7",
+    "es-tax-exception-art-7": "Espanya: N3 No subjecta art. 7 LIVA – Operacions no subjectes (aportacions, transmissió d'UEA, mostres…)",
     "es-tax-exception-e1": "Espanya: excepció per l'article 20 de la Llei de l'IVA",
     "es-tax-exception-e2": "Espanya: excepció per l'article 21 de la Llei de l'IVA",
     "es-tax-exception-e3": "Espanya: excepció per l'article 22 de la Llei de l'IVA",
