--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1412,7 +1412,7 @@
     "select": "Seleccionar",
     "select-all": "Seleccionar todo",
     "select-content-for": "Selecciona contido para %content%",
-    "select-file-to-add": "Podes engadir un ficheiro dende aquí: seleccionalo e súbeo dende o teu equipo. Preme o botón \"Ningún\" se o que queres é non seleccionar ningún.",
+    "select-file-to-add": "Podes engadir un ficheiro desde aquí: selecciónao e súbeo desde o teu ordenador. Preme o botón \"Ningún\" se o que queres é non seleccionar ningún.",
     "select-none": "Seleccionar nada",
     "select-plugin-zip-file": "Seleccione o ficheiro zip de extensión:",
     "select-user": "Seleccionar Usuario",
