--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1698,7 +1698,7 @@
     "updater": "Updater",
     "updates-available": "Aggiornamenti disponibili",
     "updates-available-p": "Sono disponibili aggiornamenti per FacturaScripts. Si prega di fare clic sull'aggiornatore e scaricare la nuova versione. Gli aggiornamenti correggono errori e aggiungono nuove funzionalità.",
-    "updates-beta-warning": "Actualizaciones beta activadas",
+    "updates-beta-warning": "Aggiornamenti beta attivati",
     "updates-beta-warning-p": "⚠️ Hai attivato gli aggiornamenti beta. Questi aggiornamenti non sono stati testati e si raccomandano solo in installazioni di prova.",
     "updating-attached-relations": "Aggiornamento dei contatori dei file allegati",
     "upload-file": "Carica file",
